# pjn

./: .gitattributes  .gitignore  Home.py  README.md  TASK.md  config.yaml  pyproject.toml  requirements.txt  shell.nix
data/: books.pkl
data/books_source/: 20-000-mil-podmorskiej-zeglugi.txt  a-coz-z-ta-dziecina.txt  a-jednak-ja-nie-watpie-bo-sie-pora-zbliza.txt  a-kiedy-bedziesz.txt  ach-rzucic-sieci-zdarte.txt  adam-asnyk-sylwetka-literacka.txt  agady-talmudyczne.txt  ajschylos-oresteja.txt  ajschylos-prometeusz-skowany.txt  akordy-jesienne.txt  akslop.txt  alcott-male-kobietki.txt  alejchem-kasrylewka.txt  alejchem-z-jarmarku.txt  aleksander-dumas-trzej-muszkieterowie.txt  amicis-serce.txt  andersen-basnie.txt  andersen-tylko-grajek.txt  androgyne.txt  andrzejewski-ciemnosci-kryja-ziemie.txt  andrzejewski-miazga.txt  aniol-kopalni-wegla.txt  aniol-ognisty-moj-aniol-lewy.txt  aniol-pasterzom-mowil.txt  anioly-stoja-na-rodzinnych-polach.txt  anski-dybuk.txt  antanas-baranauskas-anyksci-silelis.txt  antek.txt  antoniewicz-sonety.txt  antygona.txt  antymonachomachia.txt  aptekarzowa.txt  aretino-o-lajdactwach-meskich.txt  aretino-zywoty-kurtyzan.txt  argonauts-of-the-western-pacific.txt  aryman-msci-sie.txt  arystofanes-chmury.txt  arystofanes-gromiwoja.txt  arystofanes-zaby.txt  arystoteles-poetyka.txt  (+2381 more)
data/cache/: adj_noun_collocations.parquet  bigram_index.pkl  corpus_words.pkl  sentences.parquet  (+1 more)
pages/: 1_Corpus_download.py  2_Load_data.py  3_Task_1_Statistical_analysis.py  4_Task_2_Sentence_generator.py  5_Task_3_Semantical_analysis.py  Tag_Explorer.py
(+14 files in other folders)
